# osso-addressbook

./: Makefile.am  configure.ac
data/: Makefile.am  com.nokia.osso_addressbook.service.in  osso-addressbook-mime.xml  osso-addressbook.desktop  osso-addressbook.schemas
debian/: changelog  control  osso-addressbook.launcher  rules
src/: Makefile.am  actions.c  actions.h  app.c  app.h  contacts.c  contacts.h  groups.c  groups.h  hw.c  hw.h  importer.c  importer.h  main.c  menu.c  menu.h  osso-abook-get-your-contacts-dialog.c  osso-abook-get-your-contacts-dialog.h  osso-abook-recent-view.c  osso-abook-recent-view.h  osso-abook-sim-group.c  osso-abook-sim-group.h  service.c  service.h  sim.c  sim.h  utils.c  utils.h
